--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/support/haml"]
 	path = lib/support/haml
 	url = git://github.com/creationix/haml-js.git
+[submodule "lib/support/class"]
+	path = lib/support/class
+	url = git://github.com/visionmedia/class.js.git
